force-app/main/default/objects/dupcheck__dcIndex__c/dupcheck__dcIndex__c.object-meta.xml
<CustomObject>
    <label>Plauti Deduplicate Index</label>
    <nameField>
        <label>Plauti Deduplicate Object Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plauti Deduplicate Indexes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>