force-app/main/default/objects/dupcheck__dcIndex__c/fields/dupcheck__index__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__index__c</fullName>
    <label>Index</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>