force-app/main/default/objects/dupcheck__dcIndex__c/fields/dupcheck__objectPrefix__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__objectPrefix__c</fullName>
    <externalId>true</externalId>
    <label>Object Prefix</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>