force-app/main/default/objects/dupcheck__dcIndex__c/fields/dupcheck__RecordType__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__RecordType__c</fullName>
    <externalId>true</externalId>
    <label>Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>