force-app/main/default/objects/dupcheck__dcIndex__c/fields/dupcheck__recordTypeId__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__recordTypeId__c</fullName>
    <label>Record Type Id (Old)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>